# knowledge-update-service

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_testing.txt  samconfig.toml  template.yaml
.github/workflows/: auto_assign.yaml  auto_comment.yaml  build_and_deploy.yaml  build_and_deploy_dev_only.yaml  build_and_deploy_prod_only.yaml  pull_request.yaml
knowledge-curation/: lambda_handler.py
knowledge_update/: lambda_handler.py
